# blupe-evals

./: .gitignore  README.md  pyproject.toml  requirements.txt
YAM_control/: README.md  camera_relay.py  camera_sender.py  check_serve.py  gripper_cycle.py  setup_can.sh  turn_off.py  yam_real_serve.py
config/: so101_eval_stack.env.example  so101_home.json  stations.example.json  stations.jetson-local.json  stations.local-dataset.json
docs/: CENTRAL-LELAB-STATIONS.md  EVAL-VR-HANDOFF.md  LELAB-INTEGRATION-PLAN.md  MOLMOACT2-TRAINING-EVAL.md  ORIN-SETUP.md  PARALLEL-WORKSTREAMS.md  PLAN.md  POLICY-RUNNER-INTEGRATION.md  SESSION-HANDOFF.md  SO101-4090-SAM-EVAL.md  SO101-EVAL-STACK-OVERVIEW.md  STATUS.md  XR-INPUT-BRIDGE.md  XROBOTOOLKIT-YAM-HANDOFF.md  add-an-arm.md  add-an-embodiment.md  integrate-your-hardware.md  remote-topology.html  serve-protocol.md  what-happens-where.html
lerobot-robot-yam/: README.md  pyproject.toml
lerobot-robot-yam/lerobot_robot_yam/: __init__.py  config_yam_follower.py  yam_follower.py  yam_serve.py
lerobot-robot-yam/lerobot_robot_yam/examples/: __init__.py  read_and_cycle.py
relay/: relay.py
scripts/: apply_lelab_blupe_tab_patch.py  apply_lelab_camera_browser_order_fallback_patch.py  apply_lelab_camera_device_binding_patch.py  apply_lelab_dataset_editor_patch.py  apply_lelab_disable_single_tab_guard_patch.py  apply_lelab_jetson_mjpg_patch.py  apply_lelab_no_browser_patch.py  apply_lelab_recording_camera_release_patch.py  apply_lelab_recording_capture_limits_patch.py  apply_lelab_recording_stability_patch.py  apply_lelab_recording_stop_patch.py  apply_lelab_remote_camera_preview_patch.py  arms.py  check_robot_setup.py  (+79 more)
(+87 files in other folders)
